# bas

./: .gitignore  Cargo.toml  Makefile  README.md  it.pl
boostrap/: core.bath
clib/: .gitignore  Makefile
clib/include/: aa.h  cstr.h  lib.h  vec.h
clib/src/: aa.c  cstr.c  lib.c  vec.c
clib/tests/: Makefile  lib_test.c  regex_test.c
examples/: exp0.bath  test_spec.bath
spec/: ast_lowering.md  code_gen.md  preface.md
src/: aux.rs  core.rs  driver.rs  env.rs  lexer.rs  lib.rs  name_mangling.rs  shell.rs  spec.rs
src/ast_lowering/: data.rs  mod.rs  pass1.rs
src/ast_lowering/pass2/: expr.rs  item.rs  mod.rs  pat.rs  stmt.rs  ty.rs
src/codegen/: expr.rs  include.rs  item.rs  mod.rs  targets.rs  ty.rs
src/parser/: attr.rs  expr.rs  item.rs  mod.rs  pat.rs  stmt.rs  ty.rs
tutorials/: what_is_project_structure.drawio  what_language_do.md  whatlanguagedo.md
